--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:bg3UkqBbnWxpk9cubFPJrSxdk388cKzAAzWCLgoKb9I=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,13 +9,13 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=kenya_sihami
+DB_DATABASE=kenyasihami
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=mail.4somefun.com
+MAIL_PORT=465
+MAIL_USERNAME=noreply@4somefun.com
+MAIL_PASSWORD=x=F}R)XJ])9?
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=noreply@4somefun.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -44,3 +44,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
