--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "overtrue/laravel-follow": "^2.1",
+        "overtrue/laravel-like": "^2.0",
         "pbmedia/laravel-ffmpeg": "^7.0"
     },
     "require-dev": {
